--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "socket.io-node"]
 	path = socket.io-node
-	url = http://github.com/LearnBoost/Socket.IO-node.git
+	url = git://github.com/LearnBoost/socket.io.git
